--- a/gb/17/6/9/n9244491.md
+++ b/gb/17/6/9/n9244491.md
@@ -1,15 +1,15 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/nnmhge3513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/nnmhge3513/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/nnmhge3513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/nnmhge3513/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/nnmhge3513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/nnmhge3513/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/nnmhge3513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/nnmhge3513/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/nnmhge3513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/nnmhge3513/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/nnmhge3513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/nnmhge3513/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/nnmhge3513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/nnmhge3513/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/nnmhge3513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/nnmhge3513/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/nnmhge3513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/nnmhge3513/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/nnmhge3513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/nnmhge3513/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/nnmhge3513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/nnmhge3513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/nnmhge3513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/nnmhge3513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/nnmhge3513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/nnmhge3513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/nnmhge3513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/nnmhge3513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/nnmhge3513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/nnmhge3513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/nnmhge3513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/nnmhge3513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/nnmhge3513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/nnmhge3513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/nnmhge3513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/nnmhge3513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/nnmhge3513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/nnmhge3513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/nnmhge3513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/nnmhge3513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/nnmhge3513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/nnmhge3513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/nnmhge3513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/nnmhge3513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/nnmhge3513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/nnmhge3513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/nnmhge3513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>新州电价即将大涨 能源公司注资千万助客户渡难关</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2017年06月09日讯】（大纪元记者肖婕澳洲悉尼编译报导） 澳洲的许多能源公司正在扩展其助客户渡难关计划（Hardship Program），以应对预计即将上涨30%的电费。首都行政区独立竞争与<ahref="https://github.com/nnmhge3513/djy/blob/master/gb/tag/%E7%9B%91%E7%AE%A1%E5%A7%94%E5%91%98%E4%BC%9A.md#1">监管委员会</a>（ICRC）日前宣布，从7月开始，堪培拉的平均<ahref="https://github.com/nnmhge3513/djy/blob/master/gb/tag/%E9%9B%B6%E5%94%AE%E7%94%B5%E4%BB%B7.md#1">零售电价</a>将涨近20%。</p>
-<p>据悉尼晨锋报报导，<ahref="https://github.com/nnmhge3513/djy/blob/master/gb/tag/%E6%BE%B3%E6%B4%B2%E8%83%BD%E6%BA%90%E5%85%AC%E5%8F%B8.md#1">澳洲能源公司</a>（EnergyAustralia）发表声明承诺向其渡难关计划一次性投资1000万元，来帮助客户度过艰难时期。该公司说，<ahref="https://github.com/nnmhge3513/djy/blob/master/gb/tag/%E7%94%B5%E4%BB%B7.md#1">电价</a>将不会下跌，因此需要做好长期准备。该公司渡难关计划通常一年只投入150万元。</p>
-<p>尽管<ahref="https://github.com/nnmhge3513/djy/blob/master/gb/tag/%E6%BE%B3%E6%B4%B2%E8%83%BD%E6%BA%90%E5%85%AC%E5%8F%B8.md#1">澳洲能源公司</a>总经理塔纳（Catherine Tanna）无法透露<ahref="https://github.com/nnmhge3513/djy/blob/master/gb/tag/%E7%94%B5%E4%BB%B7.md#1">电价</a>上涨的具体详情，但她说公司不得不把不断膨胀的批发电力成本转嫁给客户。“这非常复杂，但批发电价在过去一年几乎翻倍，它们占了客户电费账单的25%，这是一个很大的原因，但还有许多别的原因。”</p>
+<p>【大纪元2017年06月09日讯】（大纪元记者肖婕澳洲悉尼编译报导） 澳洲的许多能源公司正在扩展其助客户渡难关计划（Hardship Program），以应对预计即将上涨30%的电费。首都行政区独立竞争与<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%9B%91%E7%AE%A1%E5%A7%94%E5%91%98%E4%BC%9A.md#1">监管委员会</a>（ICRC）日前宣布，从7月开始，堪培拉的平均<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%9B%B6%E5%94%AE%E7%94%B5%E4%BB%B7.md#1">零售电价</a>将涨近20%。</p>
+<p>据悉尼晨锋报报导，<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%BE%B3%E6%B4%B2%E8%83%BD%E6%BA%90%E5%85%AC%E5%8F%B8.md#1">澳洲能源公司</a>（EnergyAustralia）发表声明承诺向其渡难关计划一次性投资1000万元，来帮助客户度过艰难时期。该公司说，<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%94%B5%E4%BB%B7.md#1">电价</a>将不会下跌，因此需要做好长期准备。该公司渡难关计划通常一年只投入150万元。</p>
+<p>尽管<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%BE%B3%E6%B4%B2%E8%83%BD%E6%BA%90%E5%85%AC%E5%8F%B8.md#1">澳洲能源公司</a>总经理塔纳（Catherine Tanna）无法透露<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%94%B5%E4%BB%B7.md#1">电价</a>上涨的具体详情，但她说公司不得不把不断膨胀的批发电力成本转嫁给客户。“这非常复杂，但批发电价在过去一年几乎翻倍，它们占了客户电费账单的25%，这是一个很大的原因，但还有许多别的原因。”</p>
 <p>塔纳说，能源系统的情况是“用电，电价就涨”，但这不是有意的。她强调加强该公司的渡难关计划是帮助最弱势群体迈出的第一步。“我们最弱势的客户尤其需要我们的帮助，因此，我们需要与专家合作，使弱势客户处在一个更可持续的地位上，因为我们不知道在多长时间内他们将需要帮助。”</p>
-<p>继首都行政区独立竞争与<ahref="https://github.com/nnmhge3513/djy/blob/master/gb/tag/%E7%9B%91%E7%AE%A1%E5%A7%94%E5%91%98%E4%BC%9A.md#1">监管委员会</a>（ICRC）周三宣布从7月开始，其电力市场的平均<ahref="https://github.com/nnmhge3513/djy/blob/master/gb/tag/%E9%9B%B6%E5%94%AE%E7%94%B5%E4%BB%B7.md#1">零售电价</a>将涨近20%后，新州和南澳的零售能源公司的电价将涨30%的传闻一直不断。</p>
+<p>继首都行政区独立竞争与<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%9B%91%E7%AE%A1%E5%A7%94%E5%91%98%E4%BC%9A.md#1">监管委员会</a>（ICRC）周三宣布从7月开始，其电力市场的平均<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%9B%B6%E5%94%AE%E7%94%B5%E4%BB%B7.md#1">零售电价</a>将涨近20%后，新州和南澳的零售能源公司的电价将涨30%的传闻一直不断。</p>
 <p>堪培拉ActewAGL能源公司总裁科斯特洛（Michael Costello）说，此次电价上涨是“前所未有的”，他把这归咎于“十年来国家能源政策的不稳定”所致。</p>
 <p>全澳的电费都在飞涨，这反应了：批发电力成本的提高；大型燃煤发电站、包括维州污染最严重的哈泽尔伍德（Hazelwood）燃煤发电站的关闭；昆士兰天然气出口项目对天然气需求的不断增长；以及一些大型发电机的可靠性问题。</p>
 <p>根据新州Ausgrid能源公司的数据，按家庭年平均电费为2200元来算，新州家庭在下财年的电费可能最高要涨660元。该公司在悉尼、中央海岸（Central Coast）和猎人区（Hunter）拥有170多万客户。</p>
@@ -25,48 +25,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/nnmhge3513/djy/blob/master/gb/5/3/5/n836543.md#1">新州电价六月份即将上涨</a></li>
-<li><a href="https://github.com/nnmhge3513/djy/blob/master/gb/17/6/2/n9215490.md#1">美退出巴黎协定 太阳能业聚焦201条款</a></li>
-<li><a href="https://github.com/nnmhge3513/djy/blob/master/gb/17/6/2/n9217302.md#1">新州前工党厅长因腐败被判监七年</a></li>
-<li><a href="https://github.com/nnmhge3513/djy/blob/master/gb/17/6/5/n9226935.md#1">水电气费账单出错不用慌 墨尔本调查专员会来帮</a></li>
-<li><a href="https://github.com/nnmhge3513/djy/blob/master/gb/17/6/6/n9233430.md#1">房屋节能 保温隔热 房主必知</a></li>
-<li><a href="https://github.com/nnmhge3513/djy/blob/master/gb/17/6/7/n9237890.md#1">太阳能候车亭入夜好亮   中市今年目标200座</a></li>
-<li><a href="https://github.com/nnmhge3513/djy/blob/master/gb/17/6/7/n9238761.md#1">安省电费比渥太华每月多了60元 凭什么？</a></li>
-<li><a href="https://github.com/nnmhge3513/djy/blob/master/gb/17/6/8/n9239885.md#1">AGL公布在南澳建新燃气电站计划</a></li>
-<li><a href="https://github.com/nnmhge3513/djy/blob/master/gb/20/12/20/n12633090.md#1">父女俩溺亡堪培拉著名游泳景点</a></li>
-<li><a href="https://github.com/nnmhge3513/djy/blob/master/gb/20/12/20/n12632988.md#1">电话骗局猖獗 多名悉尼女被骗走数万元</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/5/3/5/n836543.md#1">新州电价六月份即将上涨</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/6/2/n9215490.md#1">美退出巴黎协定 太阳能业聚焦201条款</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/6/2/n9217302.md#1">新州前工党厅长因腐败被判监七年</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/6/5/n9226935.md#1">水电气费账单出错不用慌 墨尔本调查专员会来帮</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/6/6/n9233430.md#1">房屋节能 保温隔热 房主必知</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/6/7/n9237890.md#1">太阳能候车亭入夜好亮   中市今年目标200座</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/6/7/n9238761.md#1">安省电费比渥太华每月多了60元 凭什么？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/6/8/n9239885.md#1">AGL公布在南澳建新燃气电站计划</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616236.md#1">首都政府拨款 协助俱乐部摆脱赌博经营模式</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616258.md#1">堪培拉家长频频报告快速抗原检测假阴性</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/4/n11701121.md#1" target="_blank">宁静：中共改编《天仙配》摧毁孝道败坏人伦</a></li><li><a href="https://github.com/nnmhge3513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/23/n11741117.md#1" target="_blank">中共侵犯宗教自由 美国宣布将持续追责</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/7/n11306932.md#1" target="_blank">共产暴政录：共产党主导的三区叛乱</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/10/7/20/n2971015.md#1" target="_blank">田璐：让正义和希望之声长鸣于全人类的上空</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/nnmhge3513/djy/blob/master/gb/20/12/15/n12621699.md#1">印裔占星师分析 川普未来一个月如何逆转胜</a></li>
-<li><a href="https://github.com/nnmhge3513/djy/blob/master/gb/20/12/14/n12619436.md#1">庚子冬至木土合相 太史公和星象师有说道</a></li>
-<li><a href="https://github.com/nnmhge3513/djy/blob/master/gb/20/12/11/n12614366.md#1">尼姑癌症末期意外痊愈 修炼为何能改善疾病？</a></li>
-<li><a href="https://github.com/nnmhge3513/djy/blob/master/gb/20/7/25/n12283438.md#1">晴雯的身世  富察傅恒的奶娘，繁华散场时的女子</a></li>
-<li><a href="https://github.com/nnmhge3513/djy/blob/master/gb/20/12/1/n12587271.md#1">人长猪蹄 猪长人手 见证人畜间轮回转生</a></li>
-<li><a href="https://github.com/nnmhge3513/djy/blob/master/gb/20/12/20/n12632803.md#1">【横河直播】号召抗议活动 川普考虑多项动作</a></li>
-<li><a href="https://github.com/nnmhge3513/djy/blob/master/gb/20/12/17/n12626810.md#1">【重播】挺川灭共站出来 台北游行集会</a></li>
-<li><a href="https://github.com/nnmhge3513/djy/blob/master/gb/20/12/19/n12632629.md#1">【直播预告】美国转折点：2020学生峰会政要演讲</a></li>
-<li><a href="https://github.com/nnmhge3513/djy/blob/master/gb/20/12/18/n12630646.md#1">密歇根一县大选夜报拜登赢 重计票确认川普胜</a></li>
-<li><a href="https://github.com/nnmhge3513/djy/blob/master/gb/20/12/18/n12628817.md#1">【秦鹏直播】闭门会议？首席大法官被架火上烤</a></li>
-<li><a href="https://github.com/nnmhge3513/djy/blob/master/gb/20/12/18/n12629232.md#1">白宫网站请愿：请总统下令戒严拯救国家</a></li>
-<li><a href="https://github.com/nnmhge3513/djy/blob/master/gb/20/12/16/n12625338.md#1">《神力女超人1984》影评：一流英雄片</a></li>
-<li><a href="https://github.com/nnmhge3513/djy/blob/master/gb/20/12/18/n12629894.md#1">林志玲吃胖有原因 喊话“小天使快报名”</a></li>
-<li><a href="https://github.com/nnmhge3513/djy/blob/master/gb/20/12/18/n12630664.md#1">挺过2020年 台湾演艺圈十大话题</a></li>
-<li><a href="https://github.com/nnmhge3513/djy/blob/master/gb/20/12/18/n12630930.md#1">章子怡机场一人带两娃 醒醒对着镜头打招呼</a></li>
-<li><a href="https://github.com/nnmhge3513/djy/blob/master/gb/20/12/17/n12628248.md#1">晒孙俪超大幅书法作品 邓超搞笑演绎五体投地</a></li>
-<li><a href="https://github.com/nnmhge3513/djy/blob/master/gb/13/2/9/n3797754.md#1">这种飞蚊症不用怕！2招改善 赶走恼人飞蚊</a></li>
-<li><a href="https://github.com/nnmhge3513/djy/blob/master/gb/20/12/15/n12622560.md#1">家里常备10种中药 抗发炎、护肠胃好处说不完</a></li>
-<li><a href="https://github.com/nnmhge3513/djy/blob/master/gb/20/12/17/n12626743.md#1">“世界尽头的火车”在阿根廷最南端</a></li>
-<li><a href="https://github.com/nnmhge3513/djy/blob/master/gb/20/12/17/n12628167.md#1">苦味护心、酸味改善自律神经 一篇看懂五味功效</a></li>
-<li><a href="https://github.com/nnmhge3513/djy/blob/master/gb/20/12/17/n12626498.md#1">印度9岁女童一边接受脑部手术 一边弹琴</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614217.md#1">【财商天下】被踢出SWIFT 俄金融迅速“休克”</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614888.md#1">赴韩拍戏皮肤长满红斑 范冰冰素颜照吓坏网友</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/nnmhge3513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/nnmhge3513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/6/9/n9244491.htm">新州电价即将大涨 能源公司注资千万助客户渡难关</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/6/9/n9244491.htm">新州电价即将大涨 能源公司注资千万助客户渡难关</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/nnmhge3513/djy/blob/master/gb/17/6/9/n9244491.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/nnmhge3513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nnmhge3513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/nnmhge3513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/nnmhge3513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/nnmhge3513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nnmhge3513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/nnmhge3513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nnmhge3513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/nnmhge3513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nnmhge3513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/nnmhge3513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nnmhge3513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/nnmhge3513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nnmhge3513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/nnmhge3513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nnmhge3513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/nnmhge3513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nnmhge3513/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/nnmhge3513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nnmhge3513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/nnmhge3513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nnmhge3513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/nnmhge3513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nnmhge3513/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/nnmhge3513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nnmhge3513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/nnmhge3513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nnmhge3513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/nnmhge3513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nnmhge3513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/nnmhge3513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nnmhge3513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/nnmhge3513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nnmhge3513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/nnmhge3513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nnmhge3513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/nnmhge3513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nnmhge3513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/nnmhge3513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nnmhge3513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/nnmhge3513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nnmhge3513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/nnmhge3513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nnmhge3513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/nnmhge3513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nnmhge3513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/nnmhge3513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nnmhge3513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/17/6/9/n9244491.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
